# ChangeLog for net-fs/davfs2
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-fs/cvs-repo/gentoo-x86/net-fs/davfs2/ChangeLog,v 1.51 2010/08/17 19:20:50 ssuominen Exp $

  17 Aug 2010; Samuli Suominen <ssuominen@gentoo.org> davfs2-1.4.5.ebuild,
  +files/davfs2-1.4.5-glibc212.patch:
  Fix building (and implicits of fstat, mknod and chmod) with recent glibc
  wrt #332865 by Michael Schachtebeck.

  22 Jun 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  davfs2-1.3.3.ebuild, davfs2-1.4.1.ebuild, davfs2-1.4.5.ebuild:
  net-misc/neon renamed to net-libs/neon.

  22 May 2010; Torsten Veller <tove@gentoo.org> metadata.xml:
  Remove genstef from metadata.xml (#66339)

  08 Dec 2009; nixnut <nixnut@gentoo.org> davfs2-1.4.1.ebuild:
  ppc stable #293847

  23 Nov 2009; Markus Meier <maekke@gentoo.org> davfs2-1.4.1.ebuild:
  x86 stable, bug #293847

*davfs2-1.4.5 (20 Nov 2009)

  20 Nov 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -davfs2-1.3.0.ebuild, +davfs2-1.4.5.ebuild:
  Version bump.

  29 Oct 2009; Markus Meier <maekke@gentoo.org> davfs2-1.3.3.ebuild:
  x86 stable, bug #289420

  24 Oct 2009; nixnut <nixnut@gentoo.org> davfs2-1.3.3.ebuild:
  ppc stable #289420

*davfs2-1.4.1 (17 Oct 2009)

  17 Oct 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -files/davfs2-nobody.diff, -davfs2-1.1.4.ebuild, -davfs2-1.2.2.ebuild,
  +davfs2-1.4.1.ebuild:
  Version bump (bug #285258).

  17 Oct 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  davfs2-1.3.3.ebuild:
  Fix building with >=net-misc/neon-0.29.0 (bug #285243). Delete unused
  USE flags.

  01 Mar 2009; Patrick Lauer <patrick@gentoo.org>
  +files/fortify_sources_fix.patch, davfs2-1.3.3.ebuild:
  Fix for gcc 4.3.3 / fortify_sources, closes #257823. Patch by
  <DarkNRG@gmx.de>

*davfs2-1.3.3 (20 Jan 2009)

  20 Jan 2009; Stefan Schweizer <genstef@gentoo.org> +davfs2-1.3.3.ebuild: