@@ -5,6 +5,6 @@ DIST davfs2-1.4.1.tar.gz 425963 RMD160 56eb2bd1d28465c59a74ac086cc3eb68e5517814 
 DIST davfs2-1.4.5.tar.gz 429635 RMD160 7abb4ad3e0814532922c257f8c866f74440ed5e9 SHA1 2146dceb1e1a38441cb50753bc10a18f0e9536cb SHA256 28f0ce00ddaf1ab93aa9f39db8d9f932d194c676bc21c3c8c3e2bea7f21274de
 EBUILD davfs2-1.3.3.ebuild 1471 RMD160 54e37c6b52a794df39e4ce1204db1eeae40eebea SHA1 0fee88433a502f6b0155c85d4423b145ac52ef1a SHA256 aa201a8e50733372ee272e2d51ad8db941e4bcc93678a4f9a63e41a4ea906d46
 EBUILD davfs2-1.4.1.ebuild 1438 RMD160 ff90fbbf25889dc4f8cc8674eb2484c60665e1ef SHA1 e21f1af6cb65967b3cd111b6e5faf2621cb46ede SHA256 14ef0dbff5bba4926e63599a2fb7e0187c59c325c8e7d335a1c609989f05f963
-EBUILD davfs2-1.4.5.ebuild 1487 RMD160 57203b7b1a6a34ce7bd2d98915ea4f3bc6e61953 SHA1 5cd2d83d3c26abf10a2e8281086ad33370dcb6a2 SHA256 76517ca85e600aa4eccd8a92df560474b28d737a0e0a1bf533bd6cbd2331571a
-MISC ChangeLog 9808 RMD160 95d57ae24d3ea8677e0143526fc43d931e39179e SHA1 1b3b4096f76521f011270da16bb6ad7519e4b9f8 SHA256 3477b6cbd891a5574f8d142737977c3f2b989667e84b8a57f6e44eeabf5d5090
+EBUILD davfs2-1.4.5-r1.ebuild 1727 RMD160 eb4e72ed327bb3853f9b27a6007c42bcbf97ca27 SHA1 743a7fa1ca3703ac70f443e09c42cedb95ee96a7 SHA256 aca0b9da9553d325957ae790f20e608a62e241ea00bf2ba7a9c91fcd32063599
+MISC ChangeLog 10002 RMD160 58b3c3f29deb8d27efe30e19cbb00eb55426d572 SHA1 bbd6017f96bdcb31f6446f54102c8598a345263a SHA256 fee26527b4b34a27d3862cd58c146a27e21f1d6013c9c57bf4f03a28c059e067
 MISC metadata.xml 161 RMD160 20108ab4ad5f41adf79983fa2c927bfcd68d7f30 SHA1 eb75426b5b6a39f1321b64e7dca8854c7a396927 SHA256 d067b22721c96499a685d0b0ef3597421713a9f3befc27536b916d78f27c2951
