@@ -1,6 +1,12 @@
 # ChangeLog for net-fs/davfs2
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-fs/cvs-repo/gentoo-x86/net-fs/davfs2/ChangeLog,v 1.51 2010/08/17 19:20:50 ssuominen Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/net-fs/cvs-repo/gentoo-x86/net-fs/davfs2/ChangeLog,v 1.52 2011/03/13 21:01:06 slyfox Exp $
+
+*davfs2-1.4.5-r1 (13 Mar 2011)
+
+  13 Mar 2011; Sergei Trofimovich <slyfox@gentoo.org> -davfs2-1.4.5.ebuild,
+  +davfs2-1.4.5-r1.ebuild:
+  Added required davfs2 group. Fix by Urs Joss (bug #274312)
 
   17 Aug 2010; Samuli Suominen <ssuominen@gentoo.org> davfs2-1.4.5.ebuild,
   +files/davfs2-1.4.5-glibc212.patch:
